# VBAP-BDS-Codec

cxw/: README.md
cxw/data/: bds_export_plan_demo.json  bubbleflow_app_manifest.json  cxw_demo_authoring.json  cxw_demo_scene.bds.json  model_config.json  speaker_layout_4_0_bds.json  validation_report.json
cxw/data/demos/: demo_index.json  scene_call_response_4spk.bds.json  scene_call_response_4spk.bds.validation.json  scene_front_focus_4spk.bds.json  scene_front_focus_4spk.bds.validation.json  scene_orbit_motion_4spk.bds.json  scene_orbit_motion_4spk.bds.validation.json  scene_static_square_4spk.bds.json  scene_static_square_4spk.bds.validation.json
cxw/docs/: bds_export_bridge.md  design.md  juce_integration.md  usage.md
cxw/scripts/: validate_scene.ps1
cxw/src/: CMakeLists.txt  cxw_bds_export_bridge.cpp  cxw_bds_export_bridge.h  cxw_spatial_demo_model.cpp  cxw_spatial_demo_model.h  main.cpp
cxw/web/: bds_export_visualizer.html  bubbleflow_app_visualizer.html  conversation_archive.html  index.html
